styles.css
body{
    background-color: rgb(255, 233, 186);
    font-family:Georgia, 'Times New Roman', Times, serif;
    width: 75vw;
    margin: auto;
}

.nav{
    width: 100vw;
    padding-top: 10px;
    margin: 0 -12.5vw 0 -12.5vw;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 1rem 2rem;
    background: rgb(255, 233, 186);
    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
    position: sticky;
    top: 0;
}

.nav a{
    text-decoration: none;
    color: black;
    font-size: 20px;
    font-weight: 500;
    transition: color 0.2s ease;
}

.nav a:hover{
    color: gray;
}

.title{
    justify-content: left;
}

.homePicture img{
  width: 350px;
  height: auto;
  border-radius: 8px;
}

.homeBanner{
    text-align: center;
}

.homeBanner h1{
    font-size: 50px;
}

.homeWelcome{
    text-align: center;
}

.homeIntro{
    font-size: 25px;
    display: flex;
    align-items: center; /* vertically centers text next to image */
    gap: 10px;           /* space between image and text */
}

.homeIntro h1{
    justify-content: left;
}

.homeBio{
    font-size: 20px;
    justify-content: left;
}

.homeEducation{
    font-size: 20px;
    justify-content: left;
}


.team-intro{
    /* padding-left: 2.5vw; */
    display: flex;
    flex-direction: column;
    /* align-items: center; */
}

.all-members{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.team-section{
    /* width: 95vw; */
    width: 100%;
    justify-content: center;
    align-items: center;
}

.team-member-row{
    /* border-top: solid 1px; */
    /* margin: 1.5rem 0 0; */
    display: flex;
    align-items: flex-start;
    gap: 1rem;
}

.team-member-info{
    display: flex;
    justify-content: space-around;
    flex: 1;
}

.member-header{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.member-info{
    flex: 1;
    display: flex;
    flex-direction: column;
    padding-right: 150px;
}

.member-title{
    font-size: 20px;
}

.member-photo{
    flex: 0 0 150px;
}

.member-photo img{
    width: 100%;
    height: auto;
    border-radius: 8px;
    object-fit: cover;
}

.alumni-header{
    /* margin: 50px 0 20px 0; */
    /* border-top: dotted 1px; */
    display: flex;
    justify-content: center;
    font-size: 22px;
}

.alumni-section{
    display: flex;
    /* justify-content: space-between; */
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.alumni-section th{
    text-decoration: underline;
}

.alumni-section tr{
    text-align: center;
}

.alumni-section td{
    width: 33%;
    padding: 10px 100px;
}

.courses-subheader {
    font-size: 18px;
    font-weight: normal;
    color: black;
    margin: -10px 0 30px 0;
}

.courseDetails {
    margin: 40px 0;
}

.courseItem {
    margin: 30px 0;
    padding: 25px;
    border: 1px solid gray;
    border-radius: 5px;
}

.courseItem h3 {
    color: black;
    margin: 0 0 8px 0;
    font-size: 20px;
    font-weight: bold;
}

.courseItem h4 {
    margin: 0 0 15px 0;
    font-size: 26px;
    color: black;
    font-weight: 600;
}

.courseItem p {
    line-height: 1.8;
    color: black;
    font-size: 16px;
    margin: 0;
}

.courseDetails hr {
    margin: 40px 0;
    border: none;
    border-top: 1px solid #ccc;
}

